con vinculo a productos

--- a/indexnuevo.htm
+++ b/indexnuevo.htm
@@ -5,12 +5,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <link rel="shortlink" href="http://www.moooi.com/node">
-    <link rel="shortcut icon" href="http://www.moooi.com/sites/all/themes/moooi/favicon.ico"
+
           type="image/vnd.microsoft.icon">
-	<script src="//fast.eager.io/nrKuojQU2n.js"></script>
+	  <script src="//fast.eager.io/nrKuojQU2n.js"></script>
     <meta name="keywords" content="intpiece, marcel, wanders, collection, official, lighting, design, furniture">
-    <meta property="og:image" content="http://www.moooi.com/sites/all/themes/moooi/moooilogo.jpg">
+
     <meta name="description" content="Intpiece interior design">
     <link rel="canonical" href="files/indexmooi.htm">
     <!-- Set the viewport width to device width for mobile -->
@@ -22,7 +21,6 @@
     <link type="text/css" rel="stylesheet" href="files/css_TuwZNYxp-AXbWHQArIebwPOD0WtrrqKSEYO3vubTtjM.css" media="all">
     <link type="text/css" rel="stylesheet" href="files/css_AFNnEjvDR5CvJkNKTljzBrlXpHTR2BYWPNnWbH1OEx4.css" media="all">
     <link type="text/css" rel="stylesheet" href="files/cssgeneral.css" media="all">
-    <script type="text/javascript" async="" src="files/ga.js">
     </script>
     <script type="text/javascript" src="files/js_zzcIWOou_jnX0ZWAIA4sb6Xy_p5a8FZNA0GySvuWjPU.js"></script>
     <script type="text/javascript" src="files/js_LDA_hkHYO5oKj8zDCk7PX266O_ovBx08IKaZar1_pO0.js"></script>
@@ -67,16 +65,17 @@
 
     <section id="main" role="main" class="clearfix page front">
 
-        <div class="front-carousel" style="height: 419px;">
-            <div class="viewport" style="height: 419px;">
-                <ul class="processed" style="width: 6750px; margin-left: -4050px;">
+        <div class="front-carousel" >
+            <div class="viewport" >
+                <ul  >
 
 
-                    <li class="front-carousel-item" style="width: 1350px; height: 419px; margin-right: 0px;">
-                        <div class="news-front-image fluid"><img src="images/ButacaFrancesa.jpg" width="2500"
+                    <li class="front-carousel-item" >
+                        <div class="news-front-image fluid">
+                          <img src="images/ButacaFrancesa.jpg" width="2500"
                                                                  height="1444"
                                                                  alt=" Find your way home to Moooi’s “Unexpected Welcome” at via Savona 56"
-                                                                 style="margin-left: 0px; width: 100%; height: auto;">
+                                                              >
 
                             <div class="news-front-body">
                                 <h2 class="news-title">Butaca Francesa</h2>
